...
    @EnvironmentObject private var appStates: MainAppStates

    var body: some View {
        NavigationStack(path: $path) {
            Form {
                Section("文字で日本語を入力") {
                    NavigationLink("アラビア文字・ペルシャ文字・注音の使い方") {
                        MultiscriptGuideView()
                    }
                }
                .searchKeys("アラビア", "ペルシャ", "注音", "台湾", "使い方")
                Section("キーボードの種類") {
                    NavigationLink("キーボードの種類を設定する") {
...
                    .searchKeys("バージョン")
                }
                .inheritSearchKeys()

            }
            .searchQuery(searchQuery.isEmpty ? nil : searchQuery.toKatakana())
            .navigationTitle("設定")
            .navigationBarTitleDisplayMode(.large)
            .navigationDestination(for: CustomizeTabView.Path.self) { destination in
                switch destination {
                case let .information(identifier):
                    if let custard = try? appStates.custardManager.custard(identifier: identifier) {
                        CustardInformationView(custard: custard, path: $path)
...
